--- a/web/reportng-custom.css
+++ b/web/reportng-custom.css
@@ -1,3 +1,48 @@
+.resultsTable
+.method {
+	width: 9em;
+	padding-right: 0;
+}
+.resultsTable
+.duration {
+	width: 4em;
+	padding-left: 0.3em;
+	padding-right: 0;
+}
+
+
+.WARNING {
+font-size:0.9em;
+padding-left:19px;
+}
+.INFO {
+font-size:0.8em;
+padding-left:25px;
+}
+.FINE {
+font-size:0.6em;
+padding-left:30px;
+line-height: 1.3;
+color:#777777;
+}
+.FINER {
+font-size:0.3em;
+padding-left:35px;
+line-height: 1.3;
+color:#999999;
+}
+.FINEST {
+font-size:0.2em;
+padding-left:40px;
+line-height: 1.3;
+color:#AAAAAA;
+}
+.SEVERE {
+background-image:url(severe.png);
+background-repeat:no-repeat;
+font-size:1em;
+padding-left:19px;
+}
 .ACTION {
 background-image:url(action.png);
 background-repeat:no-repeat;
@@ -16,35 +61,7 @@ background-repeat:no-repeat;
 font-size:1em;
 padding-left:19px;
 }
-.SEVERE {
-background-image:url(severe.png);
-background-repeat:no-repeat;
-font-size:1em;
-padding-left:19px;
-}
-.WARNING {
-font-size:0.9em;
-padding-left:1.7em;
-}
-.INFO {
-font-size:0.9em;
-padding-left:1.7em;
-}
-.FINE {
-font-size:0.7em;
-padding-left:2.3em;
-color:#777777;
-}
-.FINER {
-font-size:0.7em;
-padding-left:4em;
-color:#999999;
-}
-.FINEST {
-font-size:0.6em;
-padding-left:4em;;
-color:#AAAAAA;
-}
+
 .banner {
 background-color: #EEEEEE;
 text-align: center;
