--- a/web/reportng-custom.css
+++ b/web/reportng-custom.css
@@ -1,22 +1,20 @@
-.resultsTable
-.method {
-	width: 0;
-	padding-right: 0;
+.resultsTable .method {
+max-width:0;
+padding-right:0;
 }
-.resultsTable
-.duration {
-	width: 4em;
-	padding-left: 0.3em;
-	padding-right: 0;
-	padding-top: 1.3em;
+.resultsTable .duration {
+padding-left:0.3em;
+padding-right:0;
+padding-top:1.3em;
+width:4em;
 }
 .testOutput {
-	padding-top: 2em;
+padding-top:2em;
 }
 td.result {
-	padding-top: 1.5em;
+padding-top:2em;
+padding-bottom:1.3em;
 }
-
 .WARNING {
 font-size:0.9em;
 padding-left:19px;
@@ -26,22 +24,22 @@ font-size:0.8em;
 padding-left:25px;
 }
 .FINE {
-font-size:0.6em;
-padding-left:30px;
-line-height: 1.3;
 color:#777777;
+font-size:0.6em;
+line-height:1.3;
+padding-left:30px;
 }
 .FINER {
-font-size:0.3em;
-padding-left:35px;
-line-height: 1.3;
 color:#999999;
+font-size:0.3em;
+line-height:1.3;
+padding-left:35px;
 }
 .FINEST {
-font-size:0.2em;
-padding-left:40px;
-line-height: 1.3;
 color:#AAAAAA;
+font-size:0.2em;
+line-height:1.3;
+padding-left:40px;
 }
 .SEVERE {
 background-image:url(/images/webui-framework/severe.png);
@@ -67,9 +65,7 @@ background-repeat:no-repeat;
 font-size:1em;
 padding-left:19px;
 }
-
 .banner {
-background-color: #EEEEEE;
-text-align: center;
+background-color:#EEEEEE;
+text-align:center;
 }
-
