--- a/web/reportng-custom.css
+++ b/web/reportng-custom.css
@@ -3,17 +3,16 @@ max-width:0;
 padding-right:0;
 }
 .resultsTable .duration {
-padding-left:0.3em;
+padding-left:0em;
 padding-right:0;
 padding-top:1.3em;
-width:4em;
+max-width:0;
 }
 .testOutput {
-padding-top:2em;
+padding-top:1em;
 }
 td.result {
-padding-top:2em;
-padding-bottom:1.3em;
+padding-top:3em;
 }
 .WARNING {
 font-size:0.9em;
