--- a/web/reportng-custom.css
+++ b/web/reportng-custom.css
@@ -66,7 +66,7 @@ padding-left:19px;
 }
 .banner {
 background-color:#EEEEEE;
-text-align:center;
+/*text-align:center;*/
 }
 .testOutput .startTest {
 visibility:hidden;
